--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=biblioteca
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/biblioteca
-spring.datasource.username=USERNAME
-spring.datasource.password=PASSWORD
+spring.datasource.username=postgres
+spring.datasource.password=123@321
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
